# agentkit-sdk-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-pypi.yml
agentkit/: errors.py  version.py
agentkit/a2a/: __init__.py  registry_client.py
agentkit/apps/: __init__.py
agentkit/apps/agent_server_app/: agent_server_app.py  middleware.py  origin.py  telemetry.py
agentkit/apps/harness_app/: __init__.py  agent.py  app.py  types.py  utils.py
agentkit/apps/langgraph_server_app/: __init__.py  langgraph_server_app.py
agentkit/apps/simple_app/: simple_app.py
agentkit/auth/: ADMIN-RUNBOOK.md  README.md  __init__.py  _openapi.py  _sigv4.py  admin.py  credential_hosting.py  errors.py  model_login.py  oauth.py  profile.py  providers.py  resolve.py  session.py  ssl_trust.py  sso.py  store.py  sts.py
agentkit/client/: base_agentkit_client.py  base_service_client.py
agentkit/frameworks/: __init__.py  _common.py  agentcore.py  langchain.py  langgraph.py  migration.py  model_replacement.py  strands.py
agentkit/frameworks/serving/: __init__.py  fastapi_mount.py  langserve.py
agentkit/observability/: __init__.py  context.py  framework.py
agentkit/platform/: __init__.py  configuration.py  console_urls.py  constants.py
agentkit/sdk/account/: client.py
agentkit/toolkit/: errors.py  models.py
agentkit/tools/: __init__.py
agentkit/utils/: http_defaults.py  logging_config.py  redact.py  request.py  ve_sign.py
tests/: test_error_hierarchy.py  test_version.py
tests/a2a/: test_registry_client.py
tests/apps/: test_a2a_app.py  test_agent_server_invoke.py  test_agent_server_loader.py  test_agent_server_middleware.py  test_agent_server_origin.py  test_agent_server_otel_integration.py  test_apps_telemetry.py  test_harness_app_contract.py  test_langgraph_server_app.py  test_mcp_app.py  test_simple_app.py  test_simple_app_handlers.py
tests/auth/: test_auth.py  test_identity_auth.py  test_model_login.py  test_session_id_token.py  test_sso_login.py
tests/cli/: __init__.py  __main__.py  base.py  config.py  framework.py  module_testers.py
tests/client/: test_base_service_client_errors.py
tests/frameworks/: test_agentcore_bridge.py  test_fastapi_mount.py  test_framework_bridge_otel.py  test_langchain_bridge.py  test_langgraph_bridge.py  test_langserve_compat.py  test_migration_loader.py  test_model_replacement.py  test_strands_bridge.py
tests/observability/: test_context.py  test_framework_telemetry.py
tests/platform/: conftest.py  test_configuration_creds.py  test_configuration_endpoints.py  test_vefaas_credential_rotation.py
tests/toolkit/: test_byteplus_single_region.py  test_lifecycle_launch_preflight_platform_context.py
tests/utils/: test_engineering_standards.py
(+119 files in other folders)
